# riffl

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .gitignore  ACCEPTANCE_TEST.md  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  PROJECT_INDEX.md  PROMPT.md  README.md  README.org  autoresearch.jsonl  autoresearch.md  fix_export_tests.py  flake.nix  iu5otkjpiu7cno1ctkpahhleafvrkkvf.darc  justfile  manifest  package-lock.json  qladhlbneflgqgb3sln6qdlconar8fmc.darc  ralph.yml  run_acceptance_tests.sh  skills-lock.json
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/: settings.local.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  (+1 more)
crates/riffl/: Cargo.toml
crates/riffl-core/: Cargo.toml
crates/riffl-core/benches/: mixer_bench.rs  module_parsing_bench.rs
crates/riffl-core/examples/: debug_it.rs  freq.rs  full_demo.rs
crates/riffl-core/src/: export.rs  lib.rs  log.rs  metadata.rs  song.rs  transport.rs
crates/riffl-core/src/audio/: builtin.rs  bus.rs  chip.rs  device.rs  dsp.rs  engine.rs  glicol_mixer.rs  mod.rs  pending_note.rs  pitch.rs  sample.rs  voice.rs
crates/riffl-core/src/audio/effect_processor/: processor.rs  state.rs
crates/riffl-core/src/audio/mixer/: mod.rs  preview.rs  render.rs  tests.rs  tick.rs
crates/riffl-core/src/dsl/: engine.rs  examples.rs  hooks.rs  mod.rs  pattern_api.rs
crates/riffl-core/src/format/: it.rs  mod.rs  protracker.rs  reader.rs  s3m.rs  xm.rs
crates/riffl-core/src/pattern/: effect.rs  note.rs  pattern.rs  row.rs  track.rs
crates/riffl-core/tests/: it_envelope_test.rs  s3m_debug_test.rs  s3m_loading_test.rs  s3m_playback.rs  st15_loading_test.rs  xm_it_loading_test.rs
crates/riffl-core/tests/test_modules/: 0u7r4g30us_v1b35.mod  D_DARK2.it  D_DM2TTL.it  D_END.it  D_GUIDE.it  D_TENDER.it  akashic migraine - aura.mod  c512w_-_fear-of-chiptune4.mod  cerror-close_encounter.xm  cerror_-_je_vader.xm  dune.xm  eko [early].it  kitsune_-_vision.mod  last_cookie.it  lets_disco.mod  lu hua [fugue].it  outer city.mod  whispers.xm  wind.mod
crates/riffl-tui/: Cargo.toml
crates/riffl-tui/src/: config.rs  main.rs
crates/riffl-tui/src/app/: arrangement.rs  browser.rs  command.rs  instrument.rs  mod.rs  modal.rs  pattern.rs  project.rs  sample.rs  script.rs  tests.rs  transport.rs
crates/riffl-tui/src/editor/: clipboard.rs  editing.rs  mod.rs  navigation.rs  tests.rs
crates/riffl-tui/src/input/: mod.rs
crates/riffl-tui/src/input/handler/: mouse.rs
crates/riffl-tui/src/input/handler/keyboard/: actions.rs  browsers.rs  code_editor.rs  export.rs  mod.rs  panels.rs  prompts.rs
crates/riffl-tui/src/input/handler/keyboard/actions/: editing.rs  instrument.rs  mod.rs  navigation.rs  project.rs  track.rs  transport.rs  view.rs
crates/riffl-tui/src/input/keybindings/: action.rs  dispatch.rs  mappings.rs  mod.rs  tests.rs
crates/riffl-tui/src/registry/: mod.rs
crates/riffl-tui/src/ui/: arrangement.rs  code_editor.rs  envelope_editor.rs  export_dialog.rs  export_dialog.rs.orig  export_dialog.rs.rej  fft_analyzer.rs  file_browser.rs  footer.rs  header.rs  help.rs  instrument_editor.rs  instrument_list.rs  layout.rs  lfo_editor.rs  mod.rs  oscilloscope.rs  overlays.rs  pattern_list.rs  pattern_renderer.rs  sample_browser.rs  tests.rs  theme.rs  tutor.rs  waveform_editor.rs
crates/riffl/src/app/: script.rs  transport.rs
crates/riffl/src/editor/: editing.rs  mod.rs
crates/riffl/src/ui/: export_dialog.rs  footer.rs  header.rs  overlays.rs  pattern_renderer.rs  sample_browser.rs  vu_meters.rs  waveform_editor.rs
crates/tracker-core/: Cargo.toml
crates/tracker-core/benches/: mixer_bench.rs  module_parsing_bench.rs
crates/tracker-core/examples/: debug_it.rs  dump_xm_samples.rs  freq.rs  full_demo.rs  test_xmrs.rs  x.rs
crates/tracker-core/src/: export.rs  lib.rs  log.rs  mod_import.rs  project.rs  song.rs  transport.rs
crates/tracker-core/src/audio/: adlib.rs  channel_strip.rs  dsp.rs  effect_processor.rs  glicol_mixer.rs  loader.rs  mixer.rs  mixer.rs.tmp  mod.rs  pitch.rs  sample.rs  stream.rs  visualizer.rs  voice.rs
crates/tracker-core/src/audio/effect_processor/: mod.rs  processor.rs  state.rs  types.rs
crates/tracker-core/src/audio/effects/: biquad.rs  delay.rs  mod.rs
crates/tracker-core/src/audio/mixer/: mod.rs  preview.rs  render.rs  tests.rs  tick.rs
crates/tracker-core/src/dsl/: engine.rs  pattern_api.rs
crates/tracker-core/src/format/: error.rs  it.rs  mod.rs  nsf.rs  protracker.rs  s3m.rs  xm.rs
crates/tracker-core/src/pattern/: AGENTS.md  effect.rs  note.rs  pattern.rs  row.rs  track.rs
crates/tracker-core/tests/: s3m_debug_test.rs  s3m_loading_test.rs  s3m_playback.rs  st15_loading_test.rs  xm_it_loading_test.rs
crates/tracker-core/tests/test_modules/: 20201222.mod  D_DARK.it  D_DM2INT.it  D_E1M3.it  D_GAIA.it  D_OVER.it  D_TIME.it  a route well-walked.it  akashic migraine - dehydration.mod  akashic migraine - migraine.mod  cerror-cheeky_girls_fast_food.xm  cerror_-_je_zus.xm  exosphere.it  n2o way.mod  zerd_02.it
crates/tracker-tui/: Cargo.toml
crates/tracker-tui/src/: app.rs  config.rs  main.rs
crates/tracker-tui/src/app/: arrangement.rs  command.rs  instrument.rs  mod.rs  modal.rs  pattern.rs  project.rs  sample.rs  script.rs  tests.rs  transport.rs  view.rs
crates/tracker-tui/src/editor/: editing.rs  mod.rs  tests.rs
crates/tracker-tui/src/input/: keybindings.rs
crates/tracker-tui/src/input/handler/: keyboard.rs  mod.rs  mouse.rs
crates/tracker-tui/src/input/handler/keyboard/: actions.rs  code_editor.rs  mod.rs  panels.rs
crates/tracker-tui/src/input/keybindings/: action.rs  dispatch.rs  mappings.rs  mod.rs
crates/tracker-tui/src/registry/: mod.rs
crates/tracker-tui/src/ui/: arrangement.rs  code_editor.rs  envelope_editor.rs  export_dialog.rs  fft_analyzer.rs  file_browser.rs  footer.rs  header.rs  help.rs  instrument_editor.rs  instrument_list.rs  lfo_editor.rs  mod.rs  modal.rs  oscilloscope.rs  overlays.rs  pattern_list.rs  pattern_renderer.rs  sample_browser.rs  tests.rs  theme.rs  tutor.rs  waveform_editor.rs
docs/: VISION.md  (+3 more)
(+97 files in other folders)
