[package]
name = "tracker-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
anyhow = "1.0"
cpal = "0.15"
symphonia = { version = "0.5", features = ["wav", "flac", "ogg", "vorbis"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hound = "3.5"
