[workspace]
members = ["crates/riffl-core", "crates/riffl-tui", "crates/xtask"]
exclude = ["test-opl"]
resolver = "2"

# Config for 'cargo dist' (automated binary releases)
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI
cargo-dist-version = "0.22.1"
# CI backends to support
ci = ["github"]
# The installers to generate
installers = ["shell", "powershell"]
# Target platforms to build apps for (macos, linux, windows)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Whether to install an updater binary
install-updater = true

