[package]
name = "riffl-core"
version = "0.2.0"
edition = "2021"
description = "Core audio engine and pattern sequencer for Riffl, a modern terminal-based music tracker."
repository = "https://github.com/larpios/riffl"
homepage = "https://github.com/larpios/riffl"
license-file = "../../LICENSE"
keywords = ["audio", "music", "tracker", "sequencer", "mod"]
categories = ["multimedia::audio"]

[lib]
name = "riffl_core"

[features]
default = []
adlib = ["opl"]
test-modules = []

[dependencies]
anyhow = "1.0"
cpal = "0.15"
symphonia = { version = "0.5", features = ["wav", "flac", "ogg", "vorbis"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hound = "3.5"
rhai = "1"
rand = "0.8"
thiserror = "1.0"
glicol_synth = "0.13.5"
petgraph = "0.6"
opl = { package = "opl-emu", version = "0.4", default-features = true, features = ["chip"], optional = true }
libm = "0.2.15"
dasp_sample = "0.11.0"
chrono = "0.4"

[[bench]]
name = "mixer_bench"
harness = false

[[bench]]
name = "module_parsing_bench"
harness = false

[package.metadata.cargo-audit]
ignore = ["RUSTSEC-2024-0370"]

[dev-dependencies]
criterion = "0.5"
