[package]
name = "riffl-tui"
version = "0.1.0"
edition = "2021"
description = "Modern terminal-based music tracker and pattern editor for Riffl."
repository = "https://github.com/larpios/riffl"
homepage = "https://github.com/larpios/riffl"
license-file = "../../LICENSE"
keywords = ["tui", "music", "tracker", "sequencer", "ratatui"]
categories = ["multimedia::audio", "command-line-utilities"]

[[bin]]
name = "riffl"
path = "src/main.rs"

[dependencies]
riffl_core = { package = "riffl-core", path = "../riffl-core", version ="0.1.0", features = ["adlib"] }
ratatui = "0.30"
crossterm = "0.28"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
sysinfo = "0.32"

[dev-dependencies]
hound = "3.5"
