[package]
name = "tracker-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
cpal = "0.15"
symphonia = { version = "0.5", features = ["wav", "flac", "ogg", "vorbis"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hound = "3.5"
rhai = "1"
rand = "0.8"
glicol_synth = "0.13.5"
petgraph = "0.6"
xmrs = { version = "0.9.9", features = ["import"] }
ittech = "0.3.0"

[[bench]]
name = "mixer_bench"
harness = false

[dev-dependencies]
criterion = "0.5"
