[package]
name = "tracker-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
adlib = ["opl"]

[dependencies]
anyhow = "1.0"
cpal = "0.15"
symphonia = { version = "0.5", features = ["wav", "flac", "ogg", "vorbis"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hound = "3.5"
rhai = "1"
rand = "0.8"
thiserror = "1.0"
glicol_synth = "0.13.5"
petgraph = "0.6"
game-music-emu = { version = "0.3", default-features = false, features = ["nsf"] }
opl = { package = "opl-emu", version = "0.4", default-features = true, features = ["chip"], optional = true }
libm = "0.2.15"
dasp_sample = "0.11.0"
chrono = "0.4"
dirs = "5"

[[bench]]
name = "mixer_bench"
harness = false

[[bench]]
name = "module_parsing_bench"
harness = false

[package.metadata.cargo-audit]
ignore = ["RUSTSEC-2024-0370"]

[dev-dependencies]
criterion = "0.5"
