[package]
name = "tracker-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
tracker-core = { path = "../tracker-core", features = ["adlib"] }
ratatui = "0.30"
crossterm = "0.28"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
sysinfo = "0.32"

[dev-dependencies]
hound = "3.5"
